sdk/javascript/3.0/calling-default-calling.mdx
---
title: "Default Calling"
description: "Default Calling — CometChat documentation."
---



This section will provide information on how a complete calling workflow can be set up using CometChat. We've built the complete workflow to help your users make calls, receive calls as well as accept/reject calls.

Let us assume Alex to be the call initiator and Bob is the receiver.

1. Alex initiates the call to Bob using the **initiateCall()** method.

2. Bob now has two choices:

   1. Accept the call from Alex using the **acceptCall()** method.
   2. Reject the call from Alex using the **rejectCall()** method passing the status as `rejected`.

3. In the meantime, Alex has the option to cancel the call he initiated to Bob using the **rejectCall()** method passing the status as `cancelled`.

4. If Bob accepts the call from Alex, both Alex and Bob need to call the **startCall()** method. Alex in the **onOutgoingCallAccepted()** method of the `CallListener` and Bob in the success obtained from the **acceptCall()** method and both will be connected to each other.

## Initiate Call

The `initiateCall()` method sends a call request to a user or a group.

<Tabs>
<Tab title="User Call">
```javascript
var receiverID = "UID";
var callType = CometChat.CALL_TYPE.VIDEO;
var receiverType = CometChat.RECEIVER_TYPE.USER;

var call = new CometChat.Call(receiverID, callType, receiverType);

CometChat.initiateCall(call).then(
outGoingCall => {
  console.log("Call initiated successfully:", outGoingCall);
}, error => {
  console.log("Call initialization failed with exception:", error);
}
);
```

</Tab>

<Tab title="Group Call">
```javascript
var receiverID = "GUID";
var callType = CometChat.CALL_TYPE.VIDEO;
var receiverType = CometChat.RECEIVER_TYPE.GROUP;

var call = new CometChat.Call(receiverID, callType, receiverType);

CometChat.initiateCall(call).then(
outGoingCall => {
  console.log("Call initiated successfully:", outGoingCall);
}, error => {
  console.log("Call initialization failed with exception:", error);
}
);
```

</Tab>

<Tab title="User Call (Typescript)">
```javascript
var receiverID: string = "UID";
var callType: string = CometChat.CALL_TYPE.VIDEO;
var receiverType: string = CometChat.RECEIVER_TYPE.USER;

var call: CometChat.Call = new CometChat.Call(receiverID, callType, receiverType);

CometChat.initiateCall(call).then(
  (outGoingCall: CometChat.Call) => {
      console.log("Call initiated successfully:", outGoingCall);
  }, (error: CometChat.CometChatException) => {
      console.log("Call initialization failed with exception:", error);
  }
);
```

</Tab>

<Tab title="Group Call (Typescript)">
```javascript
var receiverID: string = "GUID";
var callType: string = CometChat.CALL_TYPE.VIDEO;
var receiverType: string = CometChat.RECEIVER_TYPE.GROUP;

var call: CometChat.Call = new CometChat.Call(receiverID, callType, receiverType);

CometChat.initiateCall(call).then(
  (outGoingCall: CometChat.Call) => {
      console.log("Call initiated successfully:", outGoingCall);
  }, (error: CometChat.CometChatException) => {
      console.log("Call initialization failed with exception:", error);
  }
);
```

</Tab>

</Tabs>

This method takes an object of the `Call` class. The constructor for `Call` class takes the following parameters:

| Parameter      | Description                                                                                         |
| -------------- | --------------------------------------------------------------------------------------------------- |
| `receiverID`   | The UID or GUID of the recipient                                                                    |
| `receiverType` | The type of the receiver can be, 1.`CometChat.RECEIVER_TYPE.USER` 2.`CometChat.RECEIVER_TYPE.GROUP` |
| `callType`     | The type of call can be, 1.`CometChat.CALL_TYPE.AUDIO` 2.`CometChat.CALL_TYPE.VIDEO`                |

On successful initialization, a `Call` object is returned with the details of the call including a unique session ID for the call.

## Receive Calls

Wherever you wish to receive the call events in, you need to register the `CallListener` listener using the `addCallListener()` method.

<Tabs>
<Tab title="Receive Calls">
```javascript
var listnerID = "UNIQUE_LISTENER_ID";
CometChat.addCallListener(
listnerID,
new CometChat.CallListener({
  onIncomingCallReceived: (call) => {
    console.log("Incoming call:", call);
  },
  onOutgoingCallAccepted: (call) => {
    console.log("Outgoing call accepted:", call);
  },
  onOutgoingCallRejected: (call) => {
    console.log("Outgoing call rejected:", call);
  },
  onIncomingCallCancelled: (call) => {
    console.log("Incoming call calcelled:", call);
  }
})
);
```

</Tab>

<Tab title="TypeScript">
```ts
var listnerID: string = "UNIQUE_LISTENER_ID";
CometChat.addCallListener(
  listnerID,
  new CometChat.CallListener({
      onIncomingCallReceived: (call: CometChat.Call) => {
          console.log("Incoming call:", call);
      },
      onOutgoingCallAccepted: (call: CometChat.Call) => {
          console.log("Outgoing call accepted:", call);
      },
      onOutgoingCallRejected: (call: CometChat.Call) => {
          console.log("Outgoing call rejected:", call);
      },
      onIncomingCallCancelled: (call: CometChat.Call) => {
          console.log("Incoming call calcelled:", call);
      }
  })
);
```

</Tab>

</Tabs>

| Parametrer   | Description                                                                                    |
| ------------ | ---------------------------------------------------------------------------------------------- |
| `listenerID` | An ID that uniquely identifies that listener. We recommend using the activity or fragment name |

We recommend you remove the listener once the activity or fragment is not in use.

<Tabs>
<Tab title="Remove Call Listener">
```javascript
var listenerID = "UNIQUE_LISTENER_ID";

CometChat.removeCallListener(listenerID);
```

</Tab>

<Tab title="TypeScript">
```ts
var listenerID: string = "UNIQUE_LISTENER_ID";

CometChat.removeCallListener(listenerID);
```

</Tab>

</Tabs>

As mentioned in the [Overview](/sdk/javascript/3.0/calling-default-calling) section, Once the call is initiated, there are three options that can be possible:

1. The receiver of the call accepts the call.
2. The receiver of the call rejects the call.
3. The initiator of the call cancels the call.

Please find below how these three scenarios can be implemented:

### Accept the Incoming Call

Once you have received an incoming call from a user or in any group, to accept the call using the `acceptCall()` method.

<Tabs>
<Tab title="Accept Incoming Call">
```javascript
var sessionID = "SESSION_ID";

CometChat.acceptCall(sessionID).then(
call => {
  console.log("Call accepted successfully:", call);
}, error => {
  console.log("Call acceptance failed with error", error);
}
);
```

</Tab>

<Tab title="TypeScript">
```ts
var sessionID: string = "SESSION_ID";

CometChat.acceptCall(sessionID).then(
  (call: CometChat.Call) => {
      console.log("Call accepted successfully:", call);
  }, (error: CometChat.CometChatException) => {
      console.log("Call acceptance failed with error", error);
  }
);
```

</Tab>

</Tabs>

| Parameter   | Description                                          |
| ----------- | ---------------------------------------------------- |
| `sessionID` | The unique session ID available in the `Call` object |

### Reject the Incoming Call

To reject the incoming call once it is received using the `rejectCall()` method.

<Tabs>
<Tab title="Reject Incoming Call">
```javascript
var sessionID = "SESSION_ID";
var status = CometChat.CALL_STATUS.REJECTED;

CometChat.rejectCall(sessionID, status).then(
call => {
  console.log("Call rejected successfully", call);
}, error => {
  console.log("Call rejection failed with error:", error);
}
);
```

</Tab>

<Tab title="TypeScript">
```ts
var sessionID: string = "SESSION_ID";
var status: string = CometChat.CALL_STATUS.REJECTED;

CometChat.rejectCall(sessionID, status).then(
  (call: CometChat.Call) => {
      console.log("Call rejected successfully", call);
  }, (error: CometChat.CometChatException) => {
      console.log("Call rejection failed with error:", error);
  }
);
```

</Tab>

</Tabs>

| Parameter   | Description                                          |
| ----------- | ---------------------------------------------------- |
| `sessionID` | The unique session ID available in the `Call` object |
| `status`    | Reason for rejection of the call                     |

Here the status needs to be set as `CometChat.CALL_STATUS.REJECTED` as the call is being rejected by the receiver of the call.

### Cancel the Outgoing Call

In the case where the initiator wishes to cancel the call, use the same above `rejectCall()` method and just pass the status to the `rejectCall()` method as `CometChat.CALL_STATUS.CANCELLED`

## Start a Call

Once the call request is sent and the receiver has accepted the call, both the initiator and the receiver need to call the `startCall()` method.

You need to call this method for two scenarios:

1. After you accept an incoming call i.e. in the `onSuccess()` callback of the `acceptCall()` method.
2. After the recipient accepts an outgoing call i.e. in the `onOutgoingCallAccepted()` callback of the `CallListener` listener.

<Tabs>
<Tab title="Start a Call">
```
/**
* You can get the call Object from the success of acceptCall() or from the onOutgoingCallAccepted() callback of the CallListener.
*/
var sessionId = call.sessionId;
var callType = call.type;
var callSettings = new CometChat.CallSettingsBuilder()
  								.setSessionID(sessionId)
  								.enableDefaultLayout(true)
  								.setIsAudioOnlyCall(callType == 'audio' ? true : false)
  								.build();
CometChat.startCall(
callSettings,
document.getElementById("callScreen"),
new CometChat.OngoingCallListener({
  onUserJoined: user => {
    console.log("User joined call:", user);
  },
  onUserLeft: user => {
    console.log("User left call:", user);
  },
  onUserListUpdated: userList => {
  		console.log("user list:", userList);
  },
  onCallEnded: call => {
    console.log("Call ended:", call);
  },
  onError: error => {
    console.log("Error :", error);
  },
  onMediaDeviceListUpdated: deviceList => {
    console.log("Device List:", deviceList);
  },
  onUserMuted: (userMuted, userMutedBy) => {
    // This event will work in JS SDK v3.0.2-beta1 & later.
    console.log("Listener => onUserMuted:", userMuted, userMutedBy);
  },
  onScreenShareStarted: () => {
    // This event will work in JS SDK v3.0.3 & later.
    console.log("Screen sharing started.");
  },
  onScreenShareStopped: () => {
    // This event will work in JS SDK v3.0.3 & later.
    console.log("Screen sharing stopped.");
  },
	onCallSwitchedToVideo: (sessionId, callSwitchInitiatedBy, callSwitchAcceptedBy) => {
    	// This event will work in JS SDK v3.0.8 & later.
      console.log("call switched to video:", {sessionId, callSwitchInitiatedBy, callSwitchAcceptedBy});
  }
})
);
```

</Tab>

<Tab title="TypeScript">
```ts
/**
* You can get the call Object from the success of acceptCall() or from the onOutgoingCallAccepted() callback of the CallListener.
*/
var call: CometChat.Call;
var sessionId: string = call.getSessionId();
var callType: string = call.getType();
var callSettings: CometChat.CallSettings = new CometChat.CallSettingsBuilder()
  .setSessionID(sessionId)
  .enableDefaultLayout(true)
  .setIsAudioOnlyCall(callType == 'audio' ? true : false)
  .build();
CometChat.startCall(
  callSettings,
  document.getElementById("callScreen"),
  new CometChat.OngoingCallListener({
      onUserJoined: (user: CometChat.User) => {
          console.log("User joined call:", user);
      },
      onUserLeft: (user: CometChat.User) => {
          console.log("User left call:", user);
      },
      onUserListUpdated: (userList: CometChat.User[]) => {
          console.log("user list:", userList);
      },
      onCallEnded: (call: CometChat.Call) => {
          console.log("Call ended:", call);
      },
      onError: (error: CometChat.CometChatException) => {
          console.log("Error :", error);
      },
      onMediaDeviceListUpdated: (deviceList: Object) => {
          console.log("Device List:", deviceList);
      },
      onUserMuted: (userMuted: CometChat.User, userMutedBy: CometChat.User) => {
          // This event will work in JS SDK v3.0.2-beta1 & later.
          console.log("Listener => onUserMuted:", userMuted, userMutedBy);
      },
      onScreenShareStarted: () => {
          // This event will work in JS SDK v3.0.3 & later.
          console.log("Screen sharing started.");
      },
      onScreenShareStopped: () => {
          // This event will work in JS SDK v3.0.3 & later.
          console.log("Screen sharing stopped.");
      }
  })
);
```

</Tab>

</Tabs>

<Note>

The current `startCall()` method which takes the `sessionId`, `view`, `Ongoing Call Listener` to load the call view is deprecated and will be replaced in the future versions. It will continue to work on this version but we suggest moving to the new method as shown above using the object of the `CallSettings` class as the parameter.

</Note>

| Parameter             | Description                                                                |
| --------------------- | -------------------------------------------------------------------------- |
| `callSettings`        | Object of CallSettings class.                                              |
| `callScreen`          | DOM element where you want show the call UI.                               |
| `OngoingCallListener` | CometChat.OngoingCallListener where the real-time events will be received. |

The `OngoingCallListener` listener provides you with the below callback methods:

| Callback Method                                                                 | Description                                                                                                                  |
| ------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------- |
| `onUserJoined(user)`                                                            | This method is called when any other user joins the call. The user details can be obtained from the `User` object provided.  |
| `onUserLeft(user)`                                                              | This method is called when a user leaves the call. The details of the user can be obtained from the provided `User` object.  |
| `onError()`                                                                     | This method is called when there is some error in establishing the call.                                                     |
| `onCallEnded()`                                                                 | This method is called when the call is successfully ended. The call details can be obtained from the `Call` object provided. |
| `onUserListUpdated(userList)`                                                   | This method is triggered every time a participant joins or leaves the call providing the list of users active in the call.   |
| `onMediaDeviceListUpdated(deviceList)`                                          | This method is triggered if any new audio output source is available or becomes unavailable.                                 |
| `onUserMuted(userMuted, userMutedBy)`                                           | This method is triggered when a user is muted in the ongoing call.                                                           |
| `onScreenShareStarted()`                                                        | This method is triggered when the local user starts sharing a screen.                                                        |
| `onScreenShareStopped()`                                                        | This method is triggered when the local user stops sharing a screen.                                                         |
| `onCallSwitchedToVideo(sessionId, callSwitchInitiatedBy, callSwitchAcceptedBy)` | This callback is triggered when an audio call is converted into a video call.                                                |

## Settings

The `CallSettings` class is the most important class when it comes to the implementation of the Calling feature. This is the class that allows you to customize the overall calling experience. The properties for the call/conference can be set using the `CallSettingsBuilder` class. This will eventually give you an object of the `CallSettings` class which you can pass to the `startCall()` method to start the call.

The **mandatory** parameters that are required to be present for any call/conference to work are:

1. sessionId - The unique session Id for the call/conference session.

The options available for customization of calls are:

| Setting                                                                      | Description                                                                                                                                                                                                                                 |
| ---------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `enableDefaultLayout(defaultLayout: boolean)`                                | If set to `true` enables the default layout for handling the call operations. If set to `false` it hides the button layout and just displays the Call View. **Default value = true**                                                        |
| `showEndCallButton(showEndCallButton: boolean)`                              | If set to `true` it displays the EndCallButton in Button Layout. if set to `false` it hides the EndCallButton in Button Layout. **Default value = true**                                                                                    |
| `showPauseVideoButton(showPauseVideoButton: boolean)`                        | If set to `true` it displays the PauseVideoButton in Button Layout. if set to `false` it hides the PauseVideoButton in Button Layout. **Default value = true**                                                                              |
| `showMuteAudioButton(showMuteAudioButton: boolean)`                          | If set to `true` it displays the MuteAudioButton in Button Layout. if set to `false` it hides the MuteAudioButton in Button Layout. **Default value = true**                                                                                |
| `showScreenShareButton(showScreenShareButton: boolean)`                      | If set to `true` it displays the ShareScreenButton in Button Layout. if set to `false` it hides the ShareScreenButton in Button Layout. **Default value = true**                                                                            |
| `showModeButton(showModeButton: boolean)`                                    | If set to `true` it displays the ShowModeButton in Button Layout. if set to `false` it hides the ShowModeButton in Button Layout. **Default value = true**                                                                                  |
| `setIsAudioOnlyCall(audioOnly: boolean)`                                     | If set to true, the call will be strictly an audio call. If ser to false, the call will be an audio-video call. **Default value = false**                                                                                                   |
| `setMode(mode: string)`                                                      | CometChat provides 4 options for the calling UI. 1. CometChat.CALL\_MODE.DEFAULT 2. CometChat.CALL\_MODE.SPOTLIGHT 3. CometChat.CALL\_MODE.SINGLE 4. CometChat.CALL\_MODE.GRID **Default value = CometChat.CALL\_MODE.DEFAULT**             |
| `startWithAudioMuted(audioMuted: boolean)`                                   | This ensures the call is started with the audio muted if set to true. **Default value = false**                                                                                                                                             |
| `startWithVideoMuted(videoMuted: boolean)`                                   | This ensures the call is started with the video paused if set to true. **Default value = false**                                                                                                                                            |
| `setCustomCSS(customCSS: string)`                                            | This will apply the given CSS on the Calling UI. For example: let customCSS = ".main-container\{border: 1px solid yellow}"; setCustomCSS(customCSS) You can read more about custom CSS [here](/sdk/javascript/3.0/calling-custom-css). |
| `forceLegacyUI(useLegacyUI: boolean)`                                        | This ensures that the legacy UI is used. ** ** **Default value = true**                                                                                                                                                           |
| `showSwitchToVideoCallButton(switchCall: boolean)`                           | This method shows/hides the switch to video call button. If set to true it will display the switch to video call button. If set to false it will hide the switch to video call button. **Default value = true**                             |
| `setMainVideoContainerSetting(containerSettings: MainVideoContainerSetting)` | This method can be used to customize the main video container. You can read more about this [here](/sdk/javascript/3.0/video-view-customisation).                                                                                      |

In case you wish to achieve a completely customized UI for the Calling experience, you can do so by embedding default android buttons to the screen as per your requirement and then use the below methods to achieve different functionalities for the embedded buttons.

For the use case where you wish to align your own custom buttons and not use the default layout provided by CometChat, you can embed the buttons in your layout and use the below methods to perform the corresponding operations:

### Mute Audio

You can call the `muteAudio(mute: boolean)` method to mute/unmute your audio stream.

<Tabs>
<Tab title="Mute Audio">
```javascript
let callController = CometChat.CallController.getInstance();
callController.muteAudio(true);
```

</Tab>

<Tab title="TypeScript">
```ts
let callController: CometChat.CallController = CometChat.CallController.getInstance();
callController.muteAudio(true);
```

</Tab>

</Tabs>

If set to `true` the audio stream will be muted and if set to `false` the audio stream will be unmuted.

### Pause Video

You can call the `pauseVideo(pause: boolean)` method to pause/unpause video stream.

<Tabs>
<Tab title="Pause Video">
```javascript
let callController = CometChat.CallController.getInstance();
callController.pauseVideo(true);
```

</Tab>

<Tab title="TypeScript">
```ts
let callController: CometChat.CallController = CometChat.CallController.getInstance();
callController.pauseVideo(true);
```

</Tab>

</Tabs>

If set to `true` the video stream will be paused and if set to `false` the video stream will be unpaused.

### Start Screen Share

You can call `startScreenShare()` to start the screen share.

<Tabs>
<Tab title="Start Screen Share">
```javascript
let callController = CometChat.CallController.getInstance();
callController.startScreenShare();
```

</Tab>

<Tab title="TypeScript">
```ts
let callController: CometChat.CallController = CometChat.CallController.getInstance();
callController.startScreenShare();
```

</Tab>

</Tabs>

### Stop Screen Share

You can call `stopScreenShare()` to stop the screen share.

<Tabs>
<Tab title="Stop Screen Share">
```javascript
let callController = CometChat.CallController.getInstance();
callController.stopScreenShare();
```

</Tab>

<Tab title="TypeScript">
```ts
let callController: CometChat.CallController = CometChat.CallController.getInstance();
callController.stopScreenShare();
```

</Tab>

</Tabs>

### Set Mode

You can use the `setMode(mode: string)` method to set the mode.

<Tabs>
<Tab title="Set Mode">
```javascript
let mode = CometChat.CALL_MODE.SPOTLIGHT;
let callController = CometChat.CallController.getInstance();
callController.setMode(mode);
```

</Tab>

<Tab title="TypeScript">
```ts
let mode: string = CometChat.CALL_MODE.SPOTLIGHT;
let callController: CometChat.CallController = CometChat.CallController.getInstance();
callController.setMode(mode);
```

</Tab>

</Tabs>

### Get Audio Input Devices

You can use the `getAudioInputDevices()` method to get all the available audio input devices.

<Tabs>
<Tab title="Get Audio Input Devices">
```javascript
let callController = CometChat.CallController.getInstance();
let audioInputDevices = callController.getAudioInputDevices();
```

</Tab>

<Tab title="TypeScript">
```ts
let callController: CometChat.CallController = CometChat.CallController.getInstance();
let audioInputDevices: CometChat.MediaDevice[] = callController.getAudioInputDevices();
```

</Tab>

</Tabs>

### Get Audio Output Devices

You can use the `getAudioOutputDevices()` method to get all the available audio output devices.

<Tabs>
<Tab title="Get Audio Output Devices">
```javascript
let callController = CometChat.CallController.getInstance();
let audioOutputDevices = callController.getAudioOutputDevices();
```

</Tab>

<Tab title="TypeScript">
```ts
let callController: CometChat.CallController = CometChat.CallController.getInstance();
let audioOutputDevices: CometChat.MediaDevice[] = callController.getAudioOutputDevices();
```

</Tab>

</Tabs>

### Get Video Input Devices

You can use the `getVideoInputDevices()` method to get all the available video input devices.

<Tabs>
<Tab title="Get Video Input Devices">
```javascript
let callController = CometChat.CallController.getInstance();
let videoInputDevices = callController.getVideoInputDevices();
```

</Tab>

<Tab title="TypeScript">
```ts
let callController: CometChat.CallController = CometChat.CallController.getInstance();
let videoInputDevices: CometChat.MediaDevice[] = callController.getVideoInputDevices();
```

</Tab>

</Tabs>

### Set Audio Input Device

You can use the `setAudioInputDevice(deviceId)` method to set the active audio input device.

<Tabs>
<Tab title="Set Audio Input Device">
```javascript
let callController = CometChat.CallController.getInstance();
callController.setAudioInputDevice(deviceId);
```

</Tab>

<Tab title="TypeScript">
```ts
let callController: CometChat.CallController = CometChat.CallController.getInstance();
callController.setAudioInputDevice(deviceId);
```

</Tab>

</Tabs>

### Set Audio Output Device

You can use the `setAudioOutputDevice(deviceId)` method to set the active audio output device.

<Tabs>
<Tab title="Set Audio Output Device">
```javascript
let callController = CometChat.CallController.getInstance();
callController.setAudioOutputDevice(deviceId);
```

</Tab>

<Tab title="TypeScript">
```ts
let callController: CometChat.CallController = CometChat.CallController.getInstance();
callController.setAudioOutputDevice(deviceId);
```

</Tab>

</Tabs>

### Set Video Input Device

You can use the `setVideoInputDevice(deviceId)` method to set the active video input device.

<Tabs>
<Tab title="Set Video Input Device">
```javascript
let callController = CometChat.CallController.getInstance();
callController.setVideoInputDevice(deviceId);
```

</Tab>

<Tab title="TypeScript">
```ts
let callController: CometChat.CallController = CometChat.CallController.getInstance();
callController.setVideoInputDevice(deviceId);
```

</Tab>

</Tabs>

### Switch To Video Call

You can use the `switchToVideoCall()` method to switch from audio call to video call.

<Tabs>
<Tab title="JavaScript">
```js
let callController = CometChat.CallController.getInstance();
callController.switchToVideoCall();
```

</Tab>

<Tab title="TypeScript">
```ts
let callController: CometChat.CallController = CometChat.CallController.getInstance();
callController.switchToVideoCall();
```

</Tab>

</Tabs>

### End Call

You can use the `CometChat.endCall()` method of the `CometChat` class to end the call.

<Tabs>
<Tab title="End Call">
```
CometChat.endCall("SESSION_ID_FOR_THE_CALL").then(
  call => {
  	console.log('call ended', call);
  }, error => {
  	console.log('error', error);
  }
);
```

</Tab>

<Tab title="TypeScript">
```ts
let sessionId: string = "SESSION_ID_FOR_THE_CALL"
CometChat.endCall(sessionId).then(
  (call: CometChat.Call) => {
      console.log('call ended', call);
  }, (error: CometChat.CometChatException) => {
      console.log('error', error);
  }
);
```

</Tab>

</Tabs>

## Active Call

CometChat provides a method to get the details of the call that is currently active. The `CometChat.getActiveCall()` will return an object of the `Call` class containing the details of the ongoing call. If there is no ongoing call this method will return null.

<Tabs>
<Tab title="Get Active Call">
```javascript
let activeCall = CometChat.getActiveCall();
```

</Tab>

<Tab title="TypeScript">
```ts
let activeCall: CometChat.Call = CometChat.getActiveCall();
```

</Tab>

</Tabs>

<Note>

The `getActiveCall()` method will only return the details of the active call for the ongoing session in which the call has been started. If the app is restarted, the data will be lost.

</Note>

## Call Participant Count

In order to get the number of participants in any call, you can use the `getCallParticipantCount()` method. This method takes the session id for the call and returns the number of participants that are active in the call.

<Tabs>
<Tab title="Get Call Participant Count">
```javascript
let sessionId = "CALL_SESSION_ID";
let callType = "DEFAULT";

CometChat.getCallParticipantCount(sessionId, callType).then(
  count => {
  	console.log("Participants count =", count);
  }, error => {
  	console.log("Some error occurred =", error);
  }
);
```

</Tab>

<Tab title="TypeScript">
```ts
let sessionId: string = "CALL_SESSION_ID";
let callType: string = "DEFAULT";

CometChat.getCallParticipantCount(sessionId, callType).then(
  (count: number) => {
      console.log("Participants count =", count);
  }, (error: CometChat.CometChatException) => {
      console.log("Some error occurred =", error);
  }
);
```

</Tab>

</Tabs>
